--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-pip install haystack-ai
-pip install "datasets>=2.6.1"
-pip install "sentence-transformers>=3.0.0"
+haystack-ai
+datasets>=2.6.1
+sentence-transformers>=3.0.0
